<resources>
    <string name="app_name">DARTS X</string>
    <string name="app_name_part1">DARTS</string>
    <string name="app_name_part2">X</string>
    <string name="bull">BULL</string>
    <string name="in_bull">IN-BULL</string>
    <string name="bull_game">BULL</string>
    <string name="double_out">DOUBLE</string>
    <string name="double_out_ex_text">例：%s %s %s</string>
    <string name="double_out_first_throw_text">First： %s</string>
    <string name="double_out_second_throw_text">Second： %s</string>
    <string name="double_out_third_throw_text">Third： %s</string>
    <string name="double_out_explain_title">ダブルアウト\nチャレンジ</string>
    <string name="double_out_explain_body">ダブルアウトとは\nダブルに入れて「0」にすること</string>
    <string name="setting_button">SETTING</string>
    <string name="setting_button_text">≡</string>
    <string name="sound_setting_all">ALL</string>
    <string name="sound_setting_bgm">BGM</string>
    <string name="sound_setting_others">OTHERS</string>
    <string name="search_words_setting_input_word">input word</string>
    <string name="search_words_setting_add">add</string>
    <string name="search_words_setting_del_button">×</string>
    <string name="game_target">TARGET</string>
    <string name="game_select">SELECT</string>
    <string name="game_slash">/</string>
    <string name="game_start">START</string>
    <string name="game_again">AGAIN</string>
    <string name="game_end">END</string>
    <string name="game_success">SUCCESS</string>
    <string name="game_fail">FAIL</string>
    <string name="game_image1">IMAGE1</string>
    <string name="game_image2">IMAGE2</string>
    <string name="game_image3">IMAGE3</string>
    <string name="tos_title">利用規約</string>
</resources>
