<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.ResultActivity"
        android:padding="@dimen/common_padding">

    <TextView
            android:id="@+id/topTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:text="@string/game_select"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
            android:id="@+id/bullResultLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/topTextView">
        <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/bull"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/setting_search_word"/>
        <TextView
                android:id="@+id/bullScoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_slash"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/setting_search_word"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/inBullResultLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/bullResultLinearLayout">
        <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/in_bull"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/setting_search_word"/>
        <TextView
                android:id="@+id/inBullScoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_slash"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/setting_search_word"/>
    </LinearLayout>

    <Button
            android:id="@+id/closeButton"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/square_button_selector"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:text="@string/game_end"
            android:textSize="@dimen/top_button_size"
            android:layout_margin="@dimen/common_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/againButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"/>

    <Button
            android:id="@+id/againButton"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/square_button_selector"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:text="@string/game_again"
            android:textSize="@dimen/top_button_size"
            android:layout_margin="@dimen/common_margin"
            app:layout_constraintStart_toEndOf="@id/closeButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>