<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/favoriteLottieAnimationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/rouded_top" />

    <Button
            android:textColor="@color/colorPrimary"
            android:background="@android:color/black"
            android:text="@string/setting_button_text"
            android:textSize="@dimen/setting_button_text"
            android:layout_width="@dimen/setting_button_margin"
            android:layout_height="@dimen/setting_button_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/top_title"
            style="@style/CustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_part1"
            android:textSize="@dimen/app_title_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.35"/>

    <TextView
            android:id="@+id/top_title2"
            style="@style/CustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_part2"
            android:textSize="@dimen/app_title_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_title"/>

    <Button
            android:id="@+id/start_button"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/square_button_selector"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/start_button"
            android:textSize="@dimen/top_button_size"
            android:layout_margin="@dimen/common_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>