<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="viewModel"
                type="e.yoppie.newdartsx.viewmodel.EffectSettingViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/black">

            <RelativeLayout
                    android:layout_margin="@dimen/common_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        style="@style/CustomTextView"
                        android:id="@+id/all_text_view"
                        android:text="@string/sound_setting_all"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"/>
                <Switch
                        android:id="@+id/all_switch"
                        android:onClick="@{(view) -> viewModel.onClickSwitch(view)}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.isAllSwitchChecked}"
                        android:layout_toEndOf="@+id/all_text_view"/>
            </RelativeLayout>

            <RelativeLayout
                    android:layout_margin="@dimen/common_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        style="@style/CustomTextView"
                        android:id="@+id/bull_text_view"
                        android:text="@string/bull"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"/>
                <RelativeLayout
                        android:layout_toEndOf="@+id/bull_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <Switch
                            android:id="@+id/bull_effect_switch"
                            android:onClick="@{(view) -> viewModel.onClickSwitch(view)}"
                            android:checked="@{viewModel.isBullSwitchChecked}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    <LinearLayout
                            android:id="@+id/bull_linear_layout1"
                            android:layout_below="@+id/bull_effect_switch"
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        <Button android:id="@+id/bull_button_1" android:layout_margin="2dp" android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:text="1" app:customBackground="@{viewModel.bullButtonBackGrounds[1]}"
                                android:onClick="@{(view) -> viewModel.onClickBullButton(1)}"/>
                        <Button android:id="@+id/bull_button_2" android:layout_margin="2dp" android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:text="2" app:customBackground="@{viewModel.bullButtonBackGrounds[2]}"
                                android:onClick="@{(view) -> viewModel.onClickBullButton(2)}"/>
                        <Button android:id="@+id/bull_button_3" android:layout_margin="2dp" android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:text="3" app:customBackground="@{viewModel.bullButtonBackGrounds[3]}"
                                android:onClick="@{(view) -> viewModel.onClickBullButton(3)}"/>
                        <Button android:id="@+id/bull_button_4" android:layout_margin="2dp" android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:text="4" app:customBackground="@{viewModel.bullButtonBackGrounds[4]}"
                                android:onClick="@{(view) -> viewModel.onClickBullButton(4)}"/>
                        <Button android:id="@+id/bull_button_5" android:layout_margin="2dp" android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:text="5" app:customBackground="@{viewModel.bullButtonBackGrounds[5]}"
                                android:onClick="@{(view) -> viewModel.onClickBullButton(5)}"/>
                    </LinearLayout>
                    <LinearLayout
                            android:id="@+id/bull_linear_layout2"
                            android:layout_below="@+id/bull_linear_layout1"
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        <Button android:id="@+id/bull_button_6" android:layout_margin="2dp" android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:text="6" app:customBackground="@{viewModel.bullButtonBackGrounds[6]}"
                                android:onClick="@{(view) -> viewModel.onClickBullButton(6)}"/>
                        <Button android:id="@+id/bull_button_7" android:layout_margin="2dp" android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:text="7" app:customBackground="@{viewModel.bullButtonBackGrounds[7]}"
                                android:onClick="@{(view) -> viewModel.onClickBullButton(7)}"/>
                        <Button android:id="@+id/bull_button_8" android:layout_margin="2dp" android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:text="8" app:customBackground="@{viewModel.bullButtonBackGrounds[8]}"
                                android:onClick="@{(view) -> viewModel.onClickBullButton(8)}"/>
                        <Button android:id="@+id/bull_button_9" android:layout_margin="2dp" android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:text="9" app:customBackground="@{viewModel.bullButtonBackGrounds[9]}"
                                android:onClick="@{(view) -> viewModel.onClickBullButton(9)}"/>
                        <Button android:id="@+id/bull_button_10" android:layout_margin="2dp" android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:text="10" app:customBackground="@{viewModel.bullButtonBackGrounds[10]}"
                                android:onClick="@{(view) -> viewModel.onClickBullButton(10)}"/>
                    </LinearLayout>
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                    android:layout_margin="@dimen/common_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        style="@style/CustomTextView"
                        android:id="@+id/in_bull_text_view"
                        android:text="@string/in_bull"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"/>
                <RelativeLayout
                        android:layout_toEndOf="@+id/in_bull_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <Switch
                            android:id="@+id/in_bull_effect_switch"
                            android:onClick="@{(view) -> viewModel.onClickSwitch(view)}"
                            android:checked="@{viewModel.isInBullSwitchChecked}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    <LinearLayout
                            android:id="@+id/in_bull_linear_layout1"
                            android:layout_below="@+id/in_bull_effect_switch"
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        <Button android:id="@+id/in_bull_button_1" android:layout_margin="2dp"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:text="1" app:customBackground="@{viewModel.inBullButtonBackGrounds[1]}"
                                android:onClick="@{(view) -> viewModel.onClickInBullButton(1)}"/>
                        <Button android:id="@+id/in_bull_button_2" android:layout_margin="2dp"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:text="2" app:customBackground="@{viewModel.inBullButtonBackGrounds[2]}"
                                android:onClick="@{(view) -> viewModel.onClickInBullButton(2)}"/>
                        <Button android:id="@+id/in_bull_button_3" android:layout_margin="2dp"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:text="3" app:customBackground="@{viewModel.inBullButtonBackGrounds[3]}"
                                android:onClick="@{(view) -> viewModel.onClickInBullButton(3)}"/>
                        <Button android:id="@+id/in_bull_button_4" android:layout_margin="2dp"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:text="4" app:customBackground="@{viewModel.inBullButtonBackGrounds[4]}"
                                android:onClick="@{(view) -> viewModel.onClickInBullButton(4)}"/>
                        <Button android:id="@+id/in_bull_button_5" android:layout_margin="2dp"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:text="5" app:customBackground="@{viewModel.inBullButtonBackGrounds[5]}"
                                android:onClick="@{(view) -> viewModel.onClickInBullButton(5)}"/>
                    </LinearLayout>
                    <LinearLayout
                            android:id="@+id/in_bull_linear_layout2"
                            android:layout_below="@+id/in_bull_linear_layout1"
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        <Button android:id="@+id/in_bull_button_6" android:layout_margin="2dp"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:text="6" app:customBackground="@{viewModel.inBullButtonBackGrounds[6]}"
                                android:onClick="@{(view) -> viewModel.onClickInBullButton(6)}"/>
                        <Button android:id="@+id/in_bull_button_7" android:layout_margin="2dp"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:text="7" app:customBackground="@{viewModel.inBullButtonBackGrounds[7]}"
                                android:onClick="@{(view) -> viewModel.onClickInBullButton(7)}"/>
                        <Button android:id="@+id/in_bull_button_8" android:layout_margin="2dp"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:text="8" app:customBackground="@{viewModel.inBullButtonBackGrounds[8]}"
                                android:onClick="@{(view) -> viewModel.onClickInBullButton(8)}"/>
                        <Button android:id="@+id/in_bull_button_9" android:layout_margin="2dp"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:text="9" app:customBackground="@{viewModel.inBullButtonBackGrounds[9]}"
                                android:onClick="@{(view) -> viewModel.onClickInBullButton(9)}"/>
                        <Button android:id="@+id/in_bull_button_10" android:layout_margin="2dp"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:text="10" app:customBackground="@{viewModel.inBullButtonBackGrounds[10]}"
                                android:onClick="@{(view) -> viewModel.onClickInBullButton(10)}"/>
                    </LinearLayout>
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</layout>



